solved picasso issue

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <!--MainActivity -->
     <string name="movie_poster_contDescrip">Movie Poster</string>
+
+    <!--Adapter-->
     <string name="image_base_url">http://image.tmdb.org/t/p/w185</string>
 
 </resources>
