--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,12 +24,10 @@
     <!--Settings-->
     <string name="sort_by_label">Sort by</string>
     <string name="sort_by_key">Sort By</string>
-    <string name="popularity_sort_default">Popularity</string>
-    <string name="rated_sort">Top Rated</string>
-    <string-array name="sort_by_list">
-        <item>@string/popularity_sort_default</item>
-        <item>@string/rated_sort</item>
-    </string-array>
+    <string name="popularity_sort_label_default">Popularity</string>
+    <string name="rated_sort_label">Top Rated</string>
+    <string name="popularity_sort_value_default">Sort by popularity</string>
+    <string name="rated_sort_value">Sort by top rated</string>
     <string name="title_activity_setting">Settings</string>
 
 </resources>
