--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <!--Adapter-->
     <string name="image_base_url">http://image.tmdb.org/t/p/w185</string>
     <string name="no_data">No movies are found based on your provided settings. Please adapt them and try again</string>
+    <string name="no_internet">Please check your internet connection and try again.</string>
 
     <!--DetailActivity-->
     <string name="synopsis_contDescrip">Movie Description</string>
