Favourite-star remains active for next movie selected.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,6 @@
     <string name="error_adding_fav">An error occurred when trying to add this movie to your favourites.</string>
     <string name="error_removing_fav">An error occurred when trying to remove this movie from your favourite list.</string>
     <string name="fav_removed">This movie has been removed from your favourite list.</string>
+    <string name="favourite_bt_menu">Favourite</string>
 
 </resources>
